--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,32 @@
-version: '3.9'
+version: '3.7'
 
 services:
-  app:
-    image: ignite/node
-    build: .
-    container_name: ignitenode
+  database:
+    image: postgres
+    container_name: ignitepostgres
+    restart: always
     ports:
-      - 3333:3333
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=ignitenode
     volumes:
-      - .:/usr/app
+      - ./pgdata:/data/postgres
+    networks:
+      - custom
+
+  # app:
+  #   image: ignite/node
+  #   build: .
+  #   container_name: ignitenode
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   networks:
+  #     - custom
+
+networks:
+  custom:
+    external: true
