--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,9 @@
   "username": "postgres",
   "password": "docker",
   "database": "ignitenode",
+  "entities": [
+    "./src/modules/cars/entities/*.ts"
+  ],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
