refatoracao da aplicacao

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,11 +6,11 @@
   "password": "docker",
   "database": "ignitenode",
   "entities": [
-    "./src/modules/*/entities/*.ts"
+    "./src/modules/**/entities/*.ts"
   ],
-  "migrations": ["./src/database/migrations/*.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 
 }
