--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   database:
     image: postgres
-    container_name: ignitepostgres
+    container_name: dbignite
     restart: always
     ports:
       - 5432:5432
@@ -11,22 +11,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=ignitenode
-    volumes:
-      - ./pgdata:/data/postgres
-    networks:
-      - custom
 
-  # app:
-  #   image: ignite/node
-  #   build: .
-  #   container_name: ignitenode
-  #   ports:
-  #     - 3333:3333
-  #   volumes:
-  #     - .:/usr/app
-  #   networks:
-  #     - custom
-
-networks:
-  custom:
-    external: true
+  app:
+    image: ignite/node
+    build: .
+    container_name: appignite
+    ports:
+      - 3333:3333
